kubernetes/server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test
  name: server
spec:
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: gcr.io/keeping-it-casual/server:latest
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  namespace: test
  name: server
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - port: 50051
      targetPort: 50051
      name: grpc
