kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: test
  name: regnivon
  labels:
    app: regnivon
    service: regnivon
spec:
  ports:
    - port: 10000
      name: http
  selector:
    app: regnivon
